<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/fragment_main">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/main_navi_home" />

    <item
        android:id="@+id/navigation_safe"
        android:icon="@drawable/ic_safe_black_24dp"
        android:title="@string/main_navi_safe" />

    <item
        android:id="@+id/navigation_time"
        android:icon="@drawable/ic_time_black_24dp"
        android:title="@string/main_navi_time" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine_black_24dp"
        android:title="@string/main_navi_mine" />

</menu>
