<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@android:id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            app:navigationIcon="@drawable/ic_back_black_24dp"
            app:popupTheme="?attr/actionBarPopupTheme"
            app:title="@string/sign_title" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.widget.Space
                android:id="@android:id/button1"
                android:layout_width="wrap_content"
                android:layout_height="94dp"
                app:layout_constraintBottom_toTopOf="@+id/et_phone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="0.32" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="42dp"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="42dp"
                android:layout_marginStart="42dp"
                android:drawableLeft="@drawable/ic_phone_18dp"
                android:hint="@string/sign_phont_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="18"
                android:minHeight="44dp"
                android:focusable="true"
                android:nextFocusForward="@+id/et_verif_code"
                app:layout_constraintBottom_toTopOf="@+id/et_verif_code"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@android:id/button1" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_verif_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_sms_18dp"
                android:hint="@string/sign_verif_code_hint"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="12"
                android:minHeight="44dp"
                android:nextFocusDown="@+id/btn_get_verif_code"
                android:nextFocusForward="@+id/et_password"
                android:nextFocusRight="@+id/btn_get_verif_code"
                app:layout_constraintBottom_toTopOf="@+id/et_password"
                app:layout_constraintLeft_toLeftOf="@+id/et_phone"
                app:layout_constraintRight_toRightOf="@+id/et_phone"
                app:layout_constraintTop_toBottomOf="@+id/et_phone" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_get_verif_code"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:lines="1"
                android:text="@string/sign_get_verif_code"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_verif_code"
                app:layout_constraintRight_toRightOf="@+id/et_verif_code" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_18dp"
                android:hint="@string/sign_password_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:minHeight="44dp"
                app:layout_constraintBottom_toTopOf="@android:id/button2"
                app:layout_constraintLeft_toLeftOf="@+id/et_phone"
                app:layout_constraintRight_toRightOf="@+id/et_phone"
                app:layout_constraintTop_toBottomOf="@+id/et_verif_code"
                tools:text="password" />

            <android.support.v4.widget.Space
                android:id="@android:id/button2"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_sign"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                app:layout_constraintVertical_weight="0.15" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/sign_in_or_up"
                app:layout_constraintBottom_toTopOf="@android:id/button3"
                app:layout_constraintLeft_toLeftOf="@+id/et_phone"
                app:layout_constraintRight_toRightOf="@+id/et_phone"
                app:layout_constraintTop_toBottomOf="@android:id/button2" />

            <android.support.v4.widget.Space
                android:id="@android:id/button3"
                android:layout_width="wrap_content"
                android:layout_height="81dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_sign"
                app:layout_constraintVertical_weight="0.23" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@android:id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="21dp"
                android:paddingHorizontal="21dp"
                android:paddingLeft="21dp"
                android:paddingRight="21dp"
                android:paddingStart="21dp"
                android:text="@string/sign_third_login"
                app:layout_constraintBottom_toTopOf="@android:id/edit"
                app:layout_constraintLeft_toRightOf="@android:id/home"
                app:layout_constraintRight_toLeftOf="@android:id/hint"
                app:layout_constraintTop_toBottomOf="@android:id/button3" />

            <View
                android:id="@android:id/home"
                android:layout_width="75dp"
                android:layout_height="?android:attr/dividerHeight"
                android:background="?android:attr/divider"
                app:layout_constraintBottom_toBottomOf="@android:id/text1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@android:id/text1"
                app:layout_constraintTop_toTopOf="@android:id/text1" />

            <View
                android:id="@android:id/hint"
                android:layout_width="75dp"
                android:layout_height="?android:attr/dividerHeight"
                android:background="?android:attr/divider"
                app:layout_constraintBottom_toBottomOf="@android:id/text1"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@android:id/text1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@android:id/text1" />

            <android.support.v4.widget.Space
                android:id="@android:id/edit"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_wechat"
                app:layout_constraintTop_toBottomOf="@android:id/text1"
                app:layout_constraintVertical_weight="0.15" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:tint="?android:attr/colorForegroundInverse"
                app:layout_constraintBottom_toBottomOf="@+id/btn_wechat"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_wechat"
                app:layout_constraintTop_toTopOf="@+id/btn_wechat"
                app:srcCompat="@drawable/ic_weibo_black_25dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:clickable="true"
                android:tint="?android:attr/colorForegroundInverse"
                app:layout_constraintBottom_toTopOf="@android:id/copy"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/btn_weibo"
                app:layout_constraintRight_toLeftOf="@+id/btn_qq"
                app:layout_constraintTop_toBottomOf="@android:id/edit"
                app:srcCompat="@drawable/ic_wechat_black_25dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:clickable="true"
                android:tint="?android:attr/colorForegroundInverse"
                app:layout_constraintBottom_toBottomOf="@+id/btn_wechat"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toRightOf="@+id/btn_wechat"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btn_wechat"
                app:srcCompat="@drawable/ic_qq_black_25dp" />

            <android.support.v4.widget.Space
                android:id="@android:id/copy"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_wechat"
                app:layout_constraintVertical_weight="0.15" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>