<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/space_horizontal"
        android:paddingLeft="@dimen/space_horizontal"
        android:paddingRight="@dimen/space_horizontal">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="0dp"
            android:layout_height="238dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/choice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/background_primary"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/margin_primary"
            android:paddingLeft="@dimen/margin_primary"
            android:paddingRight="@dimen/margin_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewpager">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/goods_name_margin_vertical"
                android:paddingTop="@dimen/goods_name_margin_vertical"
                android:paddingVertical="@dimen/goods_name_margin_vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="樱花树"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/goods_space_vertical"
                    android:text="生命、热烈、纯洁、高尚。"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/goods_size_margin_vertical"
                android:paddingTop="@dimen/goods_size_margin_vertical"
                android:paddingVertical="@dimen/goods_size_margin_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/goods_space_vertical"
                    android:text="@string/goods_choice_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <RadioGroup
                    android:id="@+id/rg_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="小 299元" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="中 499元" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="大 899元" />
                </RadioGroup>
            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/goods_care_margin_vertical"
                android:paddingTop="@dimen/goods_care_margin_vertical"
                android:paddingVertical="@dimen/goods_care_margin_vertical">

                <TextView
                    android:id="@+id/tv_care"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_choice_care_of_year"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_introduce_care_of_year"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_care"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_care" />

                <RadioGroup
                    android:id="@+id/rg_care"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_care">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="1年养护 | 99元" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2年养护 | 189元" />
                </RadioGroup>
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/goods_amount_margin_vertical"
                android:paddingTop="@dimen/goods_amount_margin_vertical"
                android:paddingVertical="@dimen/goods_amount_margin_vertical">

                <!-- 这里可以尝试反向绑定 -->
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goods_choice_amount"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_sub"
                    android:layout_width="@dimen/purc_aoumnt_round"
                    android:layout_height="@dimen/purc_aoumnt_round"
                    android:background="@drawable/stroke_lt_lb_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/et_amount"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_sub_black_12dp" />

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="@dimen/purc_aoumnt_round"
                    android:layout_height="@dimen/purc_aoumnt_round"
                    android:background="@drawable/stroke_square_primary"
                    android:focusableInTouchMode="false"
                    android:gravity="center"
                    android:text="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/btn_add"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="@dimen/purc_aoumnt_round"
                    android:layout_height="@dimen/purc_aoumnt_round"
                    android:background="@drawable/stroke_rt_rb_primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_add_black_12dp" />
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>